--- a/project.config
+++ b/project.config
@@ -1,4 +1,9 @@
-[access]
-	inheritFrom = All-Projects
+[access "refs/*"]
+        owner = group android_device_samsung_e3q
+        label-Verified = -1..+1 group android_device_samsung_e3q
+        submit = group android_device_samsung_e3q
+[receive]
+        requireChangeId = true
 [submit]
-	action = inherit
+        mergeContent = true
+        action = merge always
